kong-convert/source_dir/ingress-manifests/argo-rollouts-argo-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: self-signed
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  ingressClassName: nginx
  rules:
  - host: argo-rollouts.mykubernetes.com
    http:
      paths:
      - backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
        path: /
        pathType: ImplementationSpecific
