kong-convert/source_dir/ingress-manifests/default-wiki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: wiki
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/app-root: /wiki
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wiki
    app.kubernetes.io/version: 0.0.4
    helm.sh/chart: wiki-0.0.4
  name: wiki
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: mykubernetes.com
    http:
      paths:
      - backend:
          service:
            name: wiki
            port:
              number: 8080
        path: /wiki(/|$)(.*)(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mykubernetes.com
    secretName: my-kubernetes-cert
